test/execflags/configFile/configFileErrorLineno.good
configFileErrorLineno.cfg:1: error: attempt to set config named 'name', but there is no such config
